--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.2.0
   url_launcher: ^6.1.0
+  provider: ^6.0.2
+  http: ^0.13.0
 
 dev_dependencies:
   flutter_test:
